Added complex command test